# rdma

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/rdma/: Cargo.toml  build.rs
crates/rdma-sys/: Cargo.toml  build.rs
crates/rdma-sys/src/: bindings.h  ibverbs.rs  lib.rs  rsrdma.c
crates/rdma-tool/: Cargo.toml
crates/rdma-tool/src/: auto_test.rs  devices.rs  main.rs  rcpp.rs
crates/rdma/src/: ah.rs  cc.rs  comp_channel.rs  context.rs  cq.rs  ctx.rs  device.rs  dm.rs  error.rs  lib.rs  mr.rs  mw.rs  pd.rs  qp.rs  query.rs  resource.rs  srq.rs  utils.rs  wc.rs  weakset.rs  wr.rs
crates/rdma/src/bindings/: generated.rs  ibverbs.rs  x86_64_unknown_linux_gnu.rs
crates/rdma/src/device/: device_attr.rs  device_list.rs  gid.rs  guid.rs  mod.rs  port_attr.rs
crates/rdma/src/query/: device_attr.rs  gid.rs  port_attr.rs
docs/: ref.drawio
docs/ref/: ref.drawio
examples/rdma-async/: Cargo.toml
examples/rdma-async/src/: access.rs  buf.rs  driver.rs  lib.rs  net.rs  sg_list.rs  work.rs
examples/rdma-devices/: Cargo.toml
examples/rdma-devices/src/: main.rs
examples/rdma-pingpong/: Cargo.toml
examples/rdma-pingpong/src/: main.rs
examples/rdma-rcpp/: Cargo.toml
examples/rdma-rcpp/src/: main.rs
