[package]
name = "rdma"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
fnv = "1.0.7"
hex-simd = "0.5.0"
libc = "0.2.126"
numeric_cast = "0.1.2"
parking_lot = "0.12.0"
scopeguard = "1.1.0"
serde = { version = "1.0.137", optional = true, features = ["derive"] }

[dev-dependencies]
const-str = "0.3.1"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
pkg-config = "0.3.25"
