[package]
name = "rdma"
version = "0.1.3"
edition = "2021"
description = "Low-level RDMA API"
license = "MIT"
repository = "https://github.com/Nugine/rdma"
readme = "../../README.md"
documentation = "https://docs.rs/rdma"
keywords = ["rdma", "ibverbs", "network"]
categories = ["asynchronous", "hardware-support", "network-programming"]

[dependencies]
bitflags = "1.3.2"
bytemuck = { version = "1.9.1", optional = true }
fnv = "1.0.7"
hex-simd = "0.5.0"
libc = "0.2.126"
numeric_cast = "0.1.2"
parking_lot = "0.12.0"
scopeguard = "1.1.0"
serde = { version = "1.0.137", optional = true, features = ["derive"] }

[dev-dependencies]
const-str = "0.3.1"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
pkg-config = "0.3.25"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
