[package]
name = "rdma-async"
version = "0.3.0-dev"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
numeric_cast = "0.1.2"
once_cell = "1.12.0"
parking_lot = "0.12.0"
rand = "0.8.5"
rdma = { version = "0.3.0-dev", path = "../../crates/rdma", features = ["serde"] }
scopeguard = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
