[package]
name = "rdma-async"
version = "0.4.0-dev"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
numeric_cast = "0.2.0"
once_cell = "1.14.0"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
rand = "0.8.5"
rdma = { version = "0.4.0-dev", path = "../../crates/rdma", features = ["serde"] }
scopeguard = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
