[package]
name = "rdma-pingpong"
version = "0.4.0-dev"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
clap = { version = "3.2.22", features = ["derive"] }
numeric_cast = "0.2.0"
rdma = { path = "../../crates/rdma", features = ["serde"] }
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
