[package]
name = "rdma-pingpong"
version = "0.4.0-dev"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
clap = { version = "4.0.16", features = ["derive"] }
numeric_cast = "0.2.0"
rdma = { path = "../../crates/rdma", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
