[package]
name = "rdma-rcpp"
version = "0.1.0-dev"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bytemuck = { version = "1.9.1", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
rdma = { path = "../../crates/rdma" }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
